# rust_flashcards

./: .env.example  .gitignore  .slugignore  CLAUDE.md  Cargo.toml  LICENSE  Procfile  README.md  check_categories.ps1  deck.db  flashcards.db  multi_phase_plan.md  multi_phase_plan_2.md  test_42.db
.cargo/: config.toml
.claude/: settings.local.json
assets/: 01_claude.md  02_multi_phase_plan.md  05_landing_page.pptx  07_landing_page_plan.md  08_managing_missing_dir_at_startup.md  10_implementation_dyn_suc_cat.md  11_checkboxes_management_2.md  12_update_edition_crates.md  14_cargo_version_specifiers.md  14_cli_arguments.md  16_multi_deck_cdc.md  17_multi_decks_planning.md  18_plan_for_testing.md  19_plan_for_qa_parsing.md  98_TODO.md  99_README_OLD.md  dynamic_sub_cat_display.md  hide_reveal_answer_plan.md
flashcards_staging/md_done/: 00_no_category.md  07_fs_deep_learning.md
flashcards_staging/md_in_progress/: 05_fs_supervised.md  97_sns_code_snippet.md
flashcards_staging/md_in_progress/testing/: for_test.md
flashcards_staging/py_deck/md_done/: 14_data_structures.md  (+1 more)
md_buffer/: 08_fs_deployment.md  96_matplotlib_code_snippet.md  99_sql_code_snippet.md
md_buffer/testing/: pour_test.md
proptest-regressions/content/: images.txt
py-flashcards-2/: .gitignore  .slugignore  Procfile  README.md  flashcards.db  mypy.ini  py-flashcards.py  pyproject.toml  requirements.txt
py-flashcards-2/md_buffer/: 05_fs_supervised.md  06_fs_unsupervised.md  08_fs_deployment.md  96_matplotlib_code_snippet.md  97_sns_code_snippet.md
py-flashcards-2/templates/: index.html  search.html  search_results.html
src/: cli.rs  config.rs  lib.rs  main.rs
src/content/: images.rs  markdown.rs  mod.rs
src/db/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
src/routes/: debug.rs  index.rs  landing.rs  mod.rs  next.rs  practice.rs  search.rs  search_results.rs
src/session/: mod.rs
static/css/: default.css
static/js/: filters.js  flashcard.js
static/md/: 00_no_category.md  01_fs_python.md  02_fs_eda.md  03_fs_data_collection_management.md  04_fs_big_data.md  07_fs_deep_learning.md  14_data_structures.md  95_non_technical.md  98_eda_code_snippet.md
templates/: index.html  landing.html  practice.html  search.html  search_results.html
tests/: integration_content_loading.rs  integration_routes.rs
tests/common/: fixtures.rs  mod.rs
(+25 files in other folders)
