[package]
name = "rust-flashcards"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"

# Session Management
tower-sessions = "0.13"

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Markdown Processing
pulldown-cmark = "0.13"
syntect = "5.3"

# Content Scanning
walkdir = "2"
regex = "1"

# Configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random selection
rand = "0.9"

# See .cargo/config.toml
[profile.release]
strip = true      # Remove debug symbols
opt-level = "z"   # Optimize for size
lto = true        # Link Time Optimization
codegen-units = 1 # Better optimization (slower compile)
panic = "abort"   # Reduce runtime size
